--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="lhE-La-MZP" id="Ssf-f5-e8H"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="G4r-20-qjE"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="G4r-20-qjE">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="GbZ-jh-c8X">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPress:" destination="lhE-La-MZP" id="RVy-KF-SZf"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d48-er-7UQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
